feat: update view detail

--- a/src/app/core/components/item/item.component.html
+++ b/src/app/core/components/item/item.component.html
@@ -1,6 +1,6 @@
 <div
     class=" bg-slate-100 rounded-lg overflow-hidden hover:shadow-[0_3px_10px_rgb(0,0,0,0.2)] hover:translate-y-[-8px] transition-all">
-    <a class=" hover:text-textColor">
+    <a class=" hover:text-textColor" [routerLink]="['/detail/1']">
         <img loading="lazy" class="h-[200px] w-full object-cover"
             src="https://img.thuephongtro.com/images/thumb/2020/10/08/20201008070713-mavi4.jpg" alt="" />
         <div class="px-3 py-1 pb-4">
