--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,5 +1,5 @@
 <nz-layout class="min-h-full ">
-  <nz-layout class="bg-white">
+  <nz-layout class="bg-[#f7fafc]">
     <nz-header class="bg-white  my-2 h-fit">
       <ng-container>
         <div class="w-full lg:w-[1200px] m-auto flex flex-col lg:flex-row items-center justify-between h-full gap-x-2">
