--- a/src/assets/styles/antdesign.scss
+++ b/src/assets/styles/antdesign.scss
@@ -20,13 +20,16 @@
 .ant-btn {
   border-radius: 8px;
   &.ant-btn-primary {
-    background-color: #01579b !important;
+    background-color: #01579b;
     border-radius: 8px;
     color: white;
   }
   &:hover {
     opacity: 0.75;
   }
+}
+.ant-btn-dangerous.ant-btn-primary {
+  background-color: #ff4d4f !important;
 }
 .ant-select:not(.ant-select-customize-input) .ant-select-selector {
   border: 1px solid #01579b4d;
