--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -31,8 +31,10 @@
                   nz-dropdown nzTrigger="click" [nzDropdownMenu]="menu" nzPlacement="bottomCenter" />
                 <nz-dropdown-menu #menu="nzDropdownMenu">
                   <ul nz-menu>
-                    <li nz-menu-item>{{"Menu.accountInfor"| translate}}</li>
-                    <li nz-menu-item>{{"Menu.postManagement"| translate}}</li>
+                    <li nz-menu-item [routerLink]="['/userInfor',1]" routerLinkActive="activeLink">
+                      {{"Menu.accountInfor"| translate}}</li>
+                    <li nz-menu-item [routerLink]="['/managerPost',1]" routerLinkActive="activeLink">
+                      {{"Menu.postManagement"| translate}}</li>
                     <li nz-menu-divider></li>
                     <li nz-menu-item>{{"Menu.logout"| translate}}</li>
                   </ul>
