update sendmail and  pay

--- a/src/app/features/post-news/post-news.component.html
+++ b/src/app/features/post-news/post-news.component.html
@@ -130,7 +130,7 @@
                 </div>
             </form>
 
-            <button
+            <button (click)="handelPostAndPay()"
                 class="bg-primary text-white px-4 py-2 rounded-md mt-9 float-right hover:opacity-80">{{"postPage.createPost"|translate}}</button>
         </div>
     </div>
