update currentcy mask, style item

--- a/src/app/core/components/item/item.component.html
+++ b/src/app/core/components/item/item.component.html
@@ -3,11 +3,11 @@
     <a class=" hover:text-textColor" [routerLink]="['/detail/1']">
         <img loading="lazy" class="h-[200px] w-full object-cover"
             src="https://img.thuephongtro.com/images/thumb/2020/10/08/20201008070713-mavi4.jpg" alt="" />
-        <div class="px-3 py-1 pb-4">
-            <p>Cho thuê phòng trọ tôn thất thuyết quận 4</p>
-            <p><i class="fa-solid fa-money-bill mr-2"></i>2.5 Triệu/tháng</p>
-            <p><i class="fa-solid fa-expand mr-2"></i>25m<sup>2</sup></p>
-            <p><i class="fa-solid fa-location-dot mr-2"></i> <span>Quận 5, Hồ Chí Minh</span></p>
+        <div class="px-3 py-1 pb-4 flex flex-col gap-2">
+            <p class="font-semibold text-base ">Cho thuê phòng trọ tôn thất thuyết quận 4</p>
+            <p class="text-green-600"><i class="fa-solid fa-money-bill mr-2"></i>2.5 Triệu/tháng</p>
+            <p class="text-yellow-500"><i class="fa-solid fa-expand mr-2"></i>25m<sup>2</sup></p>
+            <p class="text-gray-400"><i class="fa-solid fa-location-dot mr-2"></i> <span>Quận 5, Hồ Chí Minh</span></p>
         </div>
     </a>
 </div>
