feat: update account list

--- a/src/app/shared/components/share-table/share-table.component.html
+++ b/src/app/shared/components/share-table/share-table.component.html
@@ -67,7 +67,7 @@
     <div class="flex items-center justify-center flex-col h-14 absolute h-0 top-12 inset-x-0">
       <span nz-icon nzType="exclamation-circle" class="!text-2xl" nzTheme="outline"></span>
 
-      <span class="text-lg">Không có dữ liệu</span>
+      <span class="text-lg">{{'pagination.noData' | translate}}</span>
     </div>
   </tr>
 </ng-template>
