--- a/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
+++ b/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
@@ -1,1 +1,77 @@
-<p>accounts-list works!</p>
+<div class="p-3">
+    <form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3">
+
+        <mat-form-field class="custom-input col-span-1" appearance="outline">
+            <mat-label class="bg-white">{{'AdminPage.accountsPage.account' | translate}}</mat-label>
+            <input formControlName="account" matInput (keyPress)="searchByEnter($event)" />
+        </mat-form-field>
+
+        <mat-form-field class="custom-input col-span-1" appearance="outline">
+            <mat-label class="bg-white">{{'AdminPage.accountsPage.fullName' | translate}}</mat-label>
+            <input formControlName="fullName" matInput (keyPress)="searchByEnter($event)" />
+        </mat-form-field>
+
+        <mat-form-field class="custom-input col-span-1" appearance="outline">
+            <mat-label class="bg-white">{{'AdminPage.accountsPage.status' | translate}}</mat-label>
+            <mat-select formControlName="status">
+                <mat-option *ngFor="let status of listStatus" [value]="status.value">
+                    {{ status.label }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <div class="flex gap-2 col-span-1 col-start-3 col-end-4 justify-end">
+            <div class="bg-primary text-white rounded-xl w-[80px] cursor-pointer h-fit flex lg:flex-col  gap-1 items-center translate-y-[-20%] py-2  px-2 hover:opacity-70"
+                (click)="handelSearch()">
+                <span class="text-center"> {{'labelInput.search'|translate}}</span>
+            </div>
+            <div class="bg-red-500 text-white rounded-xl cursor-pointer h-fit flex lg:flex-col gap-1 items-center translate-y-[-20%] py-2 w-[80px] px-2 hover:opacity-70"
+                (click)="resetSearch()">
+                <span class="text-center"> {{'labelInput.reset'|translate}}</span>
+            </div>
+        </div>
+    </form>
+
+
+    <div>
+        <div class="flex  mt-5">
+            <p class="text-primary text-xl font-medium ">{{"AdminPage.accountList"|translate}}</p>
+        </div>
+
+        <app-share-table [pageIndex]="1" [loaded]="!isLoading" [data]="data" [total]="totalCount" [pageSize]="30"
+            [maxHeight]="'calc(100vh - 320px)'" (pageIndexChange)="changePage($event)"
+            (pageSizeChange)="changePageSize($event)">
+            <ng-template #headers>
+                <th scope=" col" class="font-semibold text-center w-[80px]">{{'AdminPage.no'| translate}}</th>
+                <th scope=" col" class="font-semibold text-center">{{'AdminPage.accountsPage.account'| translate}}</th>
+
+                <th scope="col" class="max-w-[315px]">{{'AdminPage.accountsPage.fullName'| translate}}</th>
+                <th scope="col" class="max-w-[150]">{{'AdminPage.accountsPage.status'| translate}}</th>
+                <th scope="col" class="w-[150px] !text-center">{{'AdminPage.accountsPage.action'| translate}}</th>
+            </ng-template>
+            <ng-template #rows let-row let-index="index">
+                <td class="max-w-[75px] text-balance">{{ index+1 }}</td>
+                <td class="text-balance max-w-[450px] truncate">{{ row.account }}</td>
+                <td class="max-w-[450px]  truncate">{{ row.fullName}}</td>
+                <td class="max-w-[150px]" [class.text-green-600]="row.status===1"
+                    [class.text-yellow-600]="row.status===0" [class.text-red-600]="row.status===2">
+                    {{row.status===1? activelable :row.status===0?deactiveLable: row.status===2?blockLabel:""}}</td>
+
+                <td>
+                    <div class="flex items-center justify-center ">
+                        <i class="fa-solid fa-ellipsis cursor-pointer" nz-dropdown nzTrigger="click"
+                            [nzDropdownMenu]="menu"></i>
+                        <nz-dropdown-menu #menu="nzDropdownMenu">
+                            <ul nz-menu>
+                                <li nz-menu-item>{{'AdminPage.accountsPage.block'| translate}}</li>
+                                <li nz-menu-item>{{'AdminPage.accountsPage.unBlock'| translate}}</li>
+                                <li nz-menu-item>{{'AdminPage.accountsPage.deleteAccount'| translate}}</li>
+                            </ul>
+                        </nz-dropdown-menu>
+                    </div>
+
+                </td>
+            </ng-template>
+        </app-share-table>
+    </div>
+</div>
