--- a/src/app/shared/components/share-pagination/share-pagination.component.html
+++ b/src/app/shared/components/share-pagination/share-pagination.component.html
@@ -1,5 +1,5 @@
 <div class="flex space-x-2 items-center">
-  <span>Tổng số {{ total }} kết quả</span>
+  <span>{{'pagination.totalPages' | translate}} {{ total }} {{'pagination.results' | translate}}</span>
   <nz-pagination [nzPageIndex]="pageIndex" [nzTotal]="total" nzShowSizeChanger [nzPageSize]="pageSize"
     (nzPageSizeChange)="setPageSize($event)" (nzPageIndexChange)="pageIndexChange.emit($event)" [nzSize]="'small'"
     [nzPageSizeOptions]="[10,30,50,100]"></nz-pagination>
