--- a/src/app/features/detail-hostel/detail-hostel.component.html
+++ b/src/app/features/detail-hostel/detail-hostel.component.html
@@ -55,7 +55,8 @@
 
         <div class="mt-2">
             <h3 class="font-medium text-[24px]">{{"detailpage.locationInMap"|translate}}</h3>
-            <div class="col-span-2" [innerHTML]="sanitizer.bypassSecurityTrustHtml(sourceMap)">
+            <div class="col-span-2">
+                <app-map [source]="sourceMap"></app-map>
             </div>
         </div>
         <div class="mt-4">
