--- a/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
+++ b/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
@@ -1,5 +1,6 @@
 <div class="p-3">
-    <form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3">
+    <form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3"
+        (keydown.enter)="$event.preventDefault()">
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'AdminPage.accountsPage.account' | translate}}</mat-label>
