--- a/src/app/features/admin/reports/report-list/report-list.component.html
+++ b/src/app/features/admin/reports/report-list/report-list.component.html
@@ -1,1 +1,84 @@
-<p>report-list works!</p>
+<div class="p-3">
+
+    <form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3"
+        (keydown.enter)="$event.preventDefault()">
+
+        <mat-form-field class="custom-input col-span-1" appearance="outline">
+            <mat-label class="bg-white">{{'AdminPage.reportpage.postReport' | translate}}</mat-label>
+            <input formControlName="title" matInput (keyPress)="searchByEnter($event)" />
+        </mat-form-field>
+
+
+
+        <mat-form-field class="custom-input col-span-1" appearance="outline">
+            <mat-label class="bg-white">{{'AdminPage.reportpage.status' | translate}}</mat-label>
+            <mat-select formControlName="status">
+                <mat-option *ngFor="let status of listStatus" [value]="status.value">
+                    {{ status.label }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <div class="flex gap-2 col-span-1 col-start-3 col-end-4 justify-end">
+            <div class="bg-primary text-white rounded-xl w-[80px] cursor-pointer h-fit flex lg:flex-col  gap-1 items-center  py-2  px-2 hover:opacity-70"
+                (click)="handelSearch()">
+                <span class="text-center"> {{'labelInput.search'|translate}}</span>
+            </div>
+            <div class="bg-red-500 text-white rounded-xl cursor-pointer h-fit flex lg:flex-col gap-1 items-center  py-2 w-[80px] px-2 hover:opacity-70"
+                (click)="resetSearch()">
+                <span class="text-center"> {{'labelInput.reset'|translate}}</span>
+            </div>
+        </div>
+    </form>
+
+
+    <div class="flex  mt-5">
+        <p class="text-primary text-xl font-medium ">{{"AdminPage.reportpage.listReports"|translate}}</p>
+    </div>
+
+    <app-share-table [pageIndex]="1" [loaded]="!isLoading" [data]="data" [total]="totalCount" [pageSize]="30"
+        [maxHeight]="'calc(100vh - 320px)'" (pageIndexChange)="changePage($event)"
+        (pageSizeChange)="changePageSize($event)">
+        <ng-template #headers>
+            <th scope=" col" class="font-semibold text-center w-[50px]">{{'AdminPage.no'| translate}}</th>
+            <th scope=" col" class="font-semibold text-center">{{'AdminPage.reportpage.postReport'| translate}}</th>
+
+            <th scope="col" class="max-w-[315px]">{{'AdminPage.reportpage.annunciator'| translate}}</th>
+            <th scope="col" class="max-w-[400px]">{{'AdminPage.reportpage.contentReports'| translate}}</th>
+            <th scope="col" class="max-w-[150]">{{'AdminPage.reportpage.status'| translate}}</th>
+            <th scope="col" class="max-w-[150]">{{'AdminPage.reportpage.statusAccept'| translate}}</th>
+            <th scope="col" class="w-[50px] !text-center">{{'AdminPage.accountsPage.action'| translate}}</th>
+        </ng-template>
+        <ng-template #rows let-row let-index="index">
+            <td class="max-w-[50px] text-balance ">{{ index+1 }}</td>
+            <td class=" max-w-[350px] truncate cursor-pointer hover:underline text-blue-600"
+                (click)="handelViewPostReport(row.id)">{{ row.postReport }}
+            </td>
+            <td class="max-w-[315px]  ">{{ row.annunciator}}</td>
+            <td class="max-w-[400px]   line-clamp-3 leading-7 hover:line-clamp-none">{{ row.contentReports}}
+            </td>
+            <td class="max-w-[150px] !text-center" [class.text-green-500]="row.status"
+                [class.text-gray-500]="!row.status">
+                {{row.status?processedTitle:noProcessTitle}}
+            </td>
+
+            <td class="max-w-[150px]" [class.text-green-500]="row.status===1" [class.text-gray-500]="row.status===-1">
+                {{row.status===1?acceptReportTitle: row.status===-1?denyReportTitle:""}}
+            </td>
+            <td>
+                <div class="flex items-center justify-center ">
+                    <i class="fa-solid fa-ellipsis cursor-pointer" nz-dropdown nzTrigger="click"
+                        [nzDropdownMenu]="menu"></i>
+                    <nz-dropdown-menu #menu="nzDropdownMenu">
+                        <ul nz-menu>
+                            <li nz-menu-item>{{'AdminPage.reportpage.acceptReport'| translate}}</li>
+                            <li nz-menu-item>{{'AdminPage.reportpage.denyReport'| translate}}</li>
+                        </ul>
+                    </nz-dropdown-menu>
+                </div>
+
+            </td>
+
+        </ng-template>
+    </app-share-table>
+</div>
