--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="grid lg:w-[700px] grid-cols-1">
         <div class=" flex justify-center items-center flex-col">
-            <h1 class="text-primary font-bold text-[100px]">Active+</h1>
+            <h1 class="text-primary font-bold text-[50px]">{{'Login.login'|translate}}</h1>
             <div
                 class=" lg:w-[700px] border-[3px] border-[rgba(131,_166,_211,_0.64)] rounded-[20px] flex flex-col justify-center items-center p-5 py-10">
                 <form [formGroup]="formLogin" class="flex flex-col gap-7 w-[80%]">
@@ -41,7 +41,7 @@
                         (click)="login()">{{'Login.login'|translate}}</button>
                 </div>
                 <div class="flex flex-col gap-y-5 mt-4 text-[16px] font-[500] text-[#1C274C]">
-                    <div class="flex flex-col gap-2 items-center">
+                    <!-- <div class="flex flex-col gap-2 items-center">
                         <span>{{'Login.loginWith'|translate}}</span>
                         <div class="flex gap-2">
                             <a><img src="../../../assets/img/googleLogo.svg" class="size-[20px] object-cover" /></a>
@@ -49,7 +49,7 @@
                             <a (click)="loginWithTrueAccount()"><img src="../../../assets/img/logoNoText.png"
                                     class="size-[22.5px] object-cover" /></a>
                         </div>
-                    </div>
+                    </div> -->
                     <a (click)="handleOpenPopUpRegister()">{{'Login.registerAccount'|translate}}</a>
 
                 </div>
