--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -12,10 +12,9 @@
                 <form [formGroup]="formLogin" class="flex flex-col gap-7 w-[80%]">
 
                     <div class="flex flex-col">
-                        <label for="userName" class="w-52">{{'Login.username'|translate}}</label>
+                        <label for="userName" class="w-52">Email</label>
                         <mat-form-field class="custom-input" appearance="outline">
-                            <input formControlName="userName" name="userName" matInput
-                                placeholder="{{'Login.userNamePlaceholder'|translate}}" />
+                            <input formControlName="userName" name="userName" matInput placeholder="Email" />
                             <mat-error>{{'Login.noEmty'|translate}}</mat-error>
                         </mat-form-field>
                     </div>
