--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -26,6 +26,8 @@
                 <button *ngIf="!isLogin" [routerLink]="['/login']" routerLinkActive="router-link-active"
                   class="hover:text-primary">{{'Button.login' | translate}}</button>
                 <!-- <button *ngIf="!isLogin" class="hover:text-primary">{{'Button.register' | translate}}</button> -->
+                <i *ngIf="isLogin" [routerLink]="['/favoritePost/1']" routerLinkActive="router-link-active"
+                  class="fa-regular fa-heart hover:text-red-600 cursor-pointer text-[18px]"></i>
                 <button class="hover:text-primary" [routerLink]="['/postNews']"
                   routerLinkActive="activeLink">{{'Button.post' | translate}}</button>
                 <img *ngIf="isLogin" src="assets/img/avatar.png" class="rounded-full size-10 cursor-pointer" alt=""
