--- a/src/app/features/admin/reports/report-list/report-list.component.html
+++ b/src/app/features/admin/reports/report-list/report-list.component.html
@@ -19,12 +19,12 @@
             </mat-select>
         </mat-form-field>
 
-        <div class="flex gap-2 col-span-1 col-start-3 col-end-4 justify-end">
-            <div class="bg-primary text-white rounded-xl w-[80px] cursor-pointer h-fit flex lg:flex-col  gap-1 items-center  py-2  px-2 hover:opacity-70"
+        <div class="flex gap-2 col-span-1 lg:col-start-3 lg:col-end-4 justify-end">
+            <div class="bg-primary text-white rounded-xl w-[80px] cursor-pointer h-fit flex lg:flex-col  gap-1 items-center justify-center py-2  px-2 hover:opacity-70"
                 (click)="handelSearch()">
                 <span class="text-center"> {{'labelInput.search'|translate}}</span>
             </div>
-            <div class="bg-red-500 text-white rounded-xl cursor-pointer h-fit flex lg:flex-col gap-1 items-center  py-2 w-[80px] px-2 hover:opacity-70"
+            <div class="bg-red-500 text-white rounded-xl cursor-pointer h-fit flex lg:flex-col gap-1 items-center justify-center py-2 w-[80px] px-2 hover:opacity-70"
                 (click)="resetSearch()">
                 <span class="text-center"> {{'labelInput.reset'|translate}}</span>
             </div>
